--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "description": "Projects to run bots and commands for slack",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
-  },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/folkin/slack-bots.git"
-  },
-  "scripts": {
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/folkin/slack-bots.git"
+  },
   "dependencies": {
-    "body-parser": "~1.12.0",
+    "body-parser": "~1.12.x",
+    "coffee-script": "~1.9.1",
     "cookie-parser": "~1.3.x",
     "debug": "~2.1.x",
     "express": "~4.12.x",
     "jade": "~1.9.2",
+    "later": "^1.1.6",
+    "log": "1.4.0",
+    "moment-timezone": "~0.3.0",
+    "serve-favicon": "~2.2.x",
     "unirest": "~0.4.x",
-    "serve-favicon": "~2.2.x"
+    "ws": "~0.4.x"
   },
   "license": "MIT"
 }
